--- a/index.html
+++ b/index.html
@@ -145,9 +145,17 @@ Error message and password prompt
 
 <li>$:/isEncrypted</li>
 
+<li>$:/palette</li>
+
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/folded/GettingStarted</li>
+
+<li>$:/state/tab--1963855381</li>
+
+<li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
 
@@ -159,9 +167,9 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>作业1</li>
+<li>搜索引擎</li>
 
-<li>作业2</li>
+<li>图书馆情报学代表人物</li>
 
 </ul>
 </p>
@@ -9369,16 +9377,28 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
+<div created="20191119142104186" modified="20191119142121832" title="$:/palette">
+<pre>$:/palettes/Blue</pre>
+</div>
 <div created="20191111121629029" modified="20191111121656243" title="$:/SiteSubtitle">
 <pre>19图书情报  白金玲</pre>
 </div>
 <div created="20191111121606944" modified="20191111121625489" title="$:/SiteTitle">
 <pre>Notebook</pre>
 </div>
+<div created="20191119142049863" modified="20191119142049863" title="$:/state/folded/GettingStarted">
+<pre>hide</pre>
+</div>
+<div created="20191119142102368" modified="20191119142102368" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Palette</pre>
+</div>
+<div created="20191119142100224" modified="20191119142100224" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
+</div>
 <div created="20191111114124199" modified="20191111121708251" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div created="20191111114125374" list="作业2 作业1 GettingStarted" modified="20191111121603705" title="$:/StoryList">
+<div created="20191119141913697" list="图书馆情报学代表人物 GettingStarted" modified="20191119142133042" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9394,7 +9414,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://bjl0328.github.io/-/baijinling.html&quot;
+            &quot;text&quot;: &quot;https://bjl0328.github.io/?nsukey=v0h%2BV%2Fl3MEv4svEHQPx9KAxIF7sNylYn3rYM1eyN6o71nK4iRFtgUxlwLZeZoVFGvl6KBwRcF9F%2Br70tUPB7F8y4HDuD2mBCAJpVSgOz66wTlj3XPN%2B3LpJgjTw4KU4m6obUYikY%2FXi5VIapafnIr1CiiLwHLCZVle7v1WXB%2FC0pWmSoEzdQErzlRjyFjr8G8dDZz2LmYu47J4%2FnJctAYg%3D%3D&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9414,11 +9434,11 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/-/baijinling.html&quot;
+            &quot;text&quot;: &quot;/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;?nsukey=v0h%2BV%2Fl3MEv4svEHQPx9KAxIF7sNylYn3rYM1eyN6o71nK4iRFtgUxlwLZeZoVFGvl6KBwRcF9F%2Br70tUPB7F8y4HDuD2mBCAJpVSgOz66wTlj3XPN%2B3LpJgjTw4KU4m6obUYikY%2FXi5VIapafnIr1CiiLwHLCZVle7v1WXB%2FC0pWmSoEzdQErzlRjyFjr8G8dDZz2LmYu47J4%2FnJctAYg%3D%3D&quot;
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
@@ -9548,7 +9568,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191103103258157" modified="20191111123837132" tags="搜索引擎" title="作业1">
+<div created="20191103103258157" modified="20191119142032896" tags="作业" title="搜索引擎">
 <pre>主要搜索引擎：
 
 1、综合型
@@ -9592,7 +9612,7 @@ Error message and password prompt
 [img[https://ir.ebaystatic.com/rs/v/fxxj3ttftm5ltcqnto1o4baovyl.png]]
 </pre>
 </div>
-<div created="20191111114127818" modified="20191111120948885" tags="图书馆情报学代表人物" title="作业2">
+<div created="20191111114127818" modified="20191119143310173" tags="作业" title="图书馆情报学代表人物">
 <pre>一、保障信息有效查询
 
 （一）技术
@@ -9605,17 +9625,24 @@ Error message and password prompt
 
 ''主要成就：''“引文索引”、创立SCI
 
+''来源：''[[尤金·加菲尔德与SCI述论|http://www.cqvip.com/QK/92694A/201406/49866428.html/]].维普网 [引用日期2019-11-15]
+
 2、索尔顿（Gerard Salton）
 
 ''简介：''1927年3月8日生于德国纽伦堡。太根海姆基金会会员，美国科学促进会会员，美国计算机协会情报检索专门小组。主要贡献：第一个真正意义上的搜索引擎于20世纪60年代创建，发明者是Gerard Salton。Gerard Salton被认为是现代搜索技术之父。他的著作《A Theory Of Indexing》、《Term Frequency-Inverse Document Frequency》为搜索引擎提供了理论的基础。此外索尔顿在自动化情报检索的教学和研究工作中也取得了很大成就。1961年主持建立了世界上第一个全自动文本处理和检索的实验性系统 SMART，该系统扩展了H.P.卢恩以计算机处理自然语言文本为基础的标引和检索概念。他在情报检索理论模型、检索策略和系统评价、自动标引和分类等方面都有重大建树。他对图书馆学也有一定研究，在培养人才方面作出了贡献。
 
 ''主要成就：''索尔顿发表了许多关于情报学、情报检索、情报处理和语言处理等方面的论著,主要有:《电子数据处理》、《计算机在商业上的应用》、《数学语言学》、《情报检索理论》《自动情报组织与检索》《SMART 检索系统──自动文献处理实验》、动态情报与图书馆处理和《现代情报检索导论》等。由于他在情报检索方面作出了重大贡献，他的名字被收入《美国名人录》。
 
+''来源：''[[杰拉德·索尔顿—情报检索领域的全才|http://www.doc88.com/p-3324680693740.html]].道客巴巴 [引用日期2019-11-15]
+
 3、 贝尔金（Nicholas J.Belkin）
 
 ''简介：''著名情报学家，美国罗格斯大学杰出教授。1977年于英国伦敦大学获得情报学博士学位，师从情报学奠基人布鲁克斯(B. C. Brooks)博士，曾在西安大略大学、伦敦大学、新加坡国立大学、芬兰坦佩雷大学受聘客座教授。贝尔金教授曾担任国际计算机学会信息检索分会(ACM SIGIR)主席、美国情报科学与技术学会(ASIST，现名为信息科学与技术协会)主席，曾获ASIST颁发的杰出教师奖、杰出研究奖和终身成就奖。他在信息检索领域做出了重大的和持续的贡献，并于2015年获得ACM SIGIR的最高奖杰拉德索尔顿(Gerald Salton)奖。
 
 ''主要成就：''是情报学的认知范式的奠基人之一，也是信息行为研究与信息检索研究相结合的领导者，他提出了著名的知识非常态(ASK)理论及描述用户与信息交互的片段模型(Episode Model)，并将这些理论应用到信息检索系统的开发和设计中。他最近的研究集中在用户与信息交互的个性化方面，特别是关于引发人们搜索的任务性质分析以及对整个会话搜索的评估方法。
+
+''来源：''[[国际著名情报学家尼古拉斯·贝尔金南开讲学|http://news.nankai.edu.cn/zhxw/system/2017/12/11/000360495.shtml]]. 南开新闻网 [引用日期2019-11-15]
+
 
 4、萨拉塞维克（Tefko Saracevic）
 
@@ -9641,6 +9668,8 @@ Error message and password prompt
 
 ''主要理论：''情报学学科体系、通信观、情报学和图书馆学的区别、情报分析和情报检索、交叉渗透是情报学的学科特点
 
+''来源：''[[美国情报学家萨拉塞维克(T.Saracevic)|https://www.baidu.com/s?ie=utf-8&amp;f=8&amp;rsv_bp=1&amp;ch=14&amp;tn=56060048_4_pg&amp;wd=%E8%90%A8%E6%8B%89%E5%A1%9E%E7%BB%B4%E5%85%8B&amp;oq=%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589%25E6%2596%25AF%25C2%25B7%25E8%25B4%259D%25E5%25B0%2594%25E9%2587%2591&amp;rsv_pq=8de41c21000113ed&amp;rsv_t=daaenqYk%2F8zM3kTXxG%2B3QKdiUaPQct8QO4YtUAocPs3wrx25ytbiFMoOtnXoSvambt15zg&amp;rqlang=cn&amp;rsv_enter=0&amp;rsv_dl=tb&amp;rsv_sug3=3]].百度知道 [引用日期2019-11-15]
+
 （二）理论
 
 1、兰卡斯特（F.Wilfrid Lancaster）
@@ -9648,6 +9677,8 @@ Error message and password prompt
 ''简介：''美国著名图书馆学家、情报学家、教育家，1933年9月4日出生于英国达勒姆，2013年8月25日去世，享年80岁。兰卡斯特以在联机检索与MEDLARS系统评价方面的成就闻名于世，在图书情报领域有着广泛的研究和成果，涉及图书馆服务评价、检索系统评价、叙词构建、检索词汇控制、标引与文摘、图书情报学的调查方法、信息系统的兼容问题、图书情报服务的技术与管理以及信息社会的相关课题等。1950～1954年就读于美国纽卡斯尔图书馆学校。1953年担任美国纽卡斯尔公共图书馆高级助理，开始了其图书馆职业生涯。先后担任美国阿克伦公共图书馆科学技术高级馆员、华盛顿赫纳公司系统评价组常务顾问和组长、美国国立医学图书馆情报系统专家和副馆长特别助理以及韦斯泰特研究公司情报检索服务部主任。1970年以后,任教于美国伊利诺伊大学图书馆学研究生院。1972年担任该院教授并兼任生物医学图书馆员培训计划负责人。他还是英国伦敦分类法研究小组的成员。
 
 ''主要著作:''《情报检索系统──特性、试验与评价》(1968)、《医学文献分析与检索系统查询检索服务评价》(1968)、《情报检索词汇控制》(1972)、《联机情报检索》(1973)、《图书馆服务的测量与评价》(1977)、 《走向无纸信息社会》(1978)等。到70年代末，他还编辑了5部书,撰写了70多篇论文和技术报告。1969年他的论文获美国情报学会颁发的最佳论文奖，1970年和1975年他的著作又两次获得最佳图书奖。1978年由于他编写的《图书馆服务的测量与评价》填补了图书馆学研究的空白,获拉尔夫·肖奖。 
+
+''来源：''王益明,谢新洲;情报系统与图书馆服务评价专家──兰开斯特[J];情报理论与实践;1995年01期
 
 2、彼得·英格尔森（Peter Ingwersen）
 
@@ -9665,15 +9696,21 @@ Error message and password prompt
 
 开放科学的最后前沿：开放同行评审会改变科学和学术出版吗？
 
+''来源：''彼得·英格沃森;秦喜艳;陆伟; 情境驱动的交互式信息检索集成研究框架[J];图书情报知识;2008年第06期
+
 （三）哲学基础
 
 1、德尔文（Brenda Dervin）
 
 ''简介：''美国学者，创立了意义构建理论。德尔文的意义构建（sense-making）是一种解释沟通、信息与意义之间关系的概念性工具。意义构建理论认为信息研究应由来源强调转向使用者强调的方向，这种转向视信息寻求与使用为一种沟通实践模式。德尔文的意义构建理论是以使用者为中心，即认为知识是主观、由个人意义构建而成，而信息寻求是种主观构建的活动，在线检索的活动是一连串互动、解决问题的过程，由于互动的本质，检索问题而产生的多样的情境，形成不同的意义构建过程，且意义构建理论是一种强调以历时性过程为导向的方法，提供倾听使用者的方法。了解使用者如何解读他们目前所处的情境、过去的经验及未来可能面临的情境，及使用者在所处情境中如何构建意义（construct sense）和制造意义（make meaning）。
 
+''来源：''[[大数据环境下多源信息融合的理论与应用探讨|https://www.jinchutou.com/p-34137136.html]].金锄头文库 [引用日期2019-11-15]
+
 2、约翰·巴德
 
 ''简介：''密苏里大学 ，信息科学与学习技术学院
+
+''来源：''约翰巴德,王林西; 图书馆员是教师[J]图书馆学研究 ;1985年03期
 
 ''研究项目(151)：''
 
@@ -9686,6 +9723,9 @@ Error message and password prompt
 新闻、假新闻和批评权威
 
 分类活动的认识论依据与受控词汇的发展
+
+''来源：''[[Birger Hjørland’s Manichean Misconstruction|
+https://www.docin.com/p-1712513291.html]].豆丁文库 [引用日期2019-11-15]
 
 3、约兰德（北欧）
 
@@ -9703,6 +9743,9 @@ Error message and password prompt
 
 ''简介：''曾任英国国家图书馆的馆长，退居二线以后，他担任英国国家图书馆主办的杂志《亚历山大》(Alexandria)的主编。该杂志主要讨论各国国家图书馆的建设问题。
 
+''来源：''[[storage and deposit libraries|
+http://cn.bing.com/dict/storage%20and%20deposit%20libraries]].必应词典 [引用日期2019-11-15]
+
 （二）理论
 
 1、泰勒（Robert S.Taylor）
@@ -9719,6 +9762,8 @@ Error message and password prompt
 
 ''简介：''美国Syracuse大学信息研究学院资深教授查尔斯麦克卢尔(Charles R. McClure)在1994年极富预见性地认识到了网络环境对人们信息需求及其满足的影响，提出了基于网络的信息素养模型，该模型由四个层次构成，实质是网络环境下解决信息问题能力的体现。
 
+''来源：''[[图书馆学实证研究知识简明问答|https://wenku.baidu.com/view/488a88faaaea998fcd220e2b.html]].百度文库 [引用日期2019-11-15]
+
 6、麦德斯（Jack Meadows）：英国情报学家
 
 7、威尔逊（T.D.Wilson）：英国情报学家
@@ -9726,6 +9771,9 @@ Error message and password prompt
 8、伯顿（David Bawden）
 
 ''简介：''1960年伯顿和凯布勒给出了“老化解析式”的引文分布函数，该公式已被情报学界认为是经典。
+
+''来源：''Reijo Savolainen Everyday Information Practices: A Social Phenomenological Perspective 2008 Scarecrow Lanham, MD 232pp. $55.00 (pbk). ISBN 978-0810861114.	Denise E. Agosto	Library and Information Science Research
+
 
 9、萨沃雷宁（Rejio Savolainen）：北欧情报学家，坦佩雷大学通信科学学院的名誉教授。</pre>
 </div>
